[package]
name = "fff"
version = "0.1.0"
authors = ["jacokoo <jaco.koo@guyong.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.21", features = ["full"] }
async-trait = "0.1.36"
thrussh = "0.28.0"
toml = "0.5.0"
fff-macros = { version = "0.1", path = "fff-macros" }
dirs = "3.0.1"
crossterm = "0.17.7"
unicode-width = "0.1.7"
delegate = "0.4.3"
num-integer = "0.1.43"