[package]
name = "fff-macros-hack"
version = "0.1.0"
authors = ["jacokoo <jaco.koo@guyong.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro-hack = "0.5"
fff-macros = { version = "0.1", path = "../fff-macros" }